# authinfo-gpg

./: LICENSE  README.md  pyproject.toml
authinfo_gpg/: __init__.py  core.py
tests/: test_core.py
